--- a/views/dayOffResult.hbs
+++ b/views/dayOffResult.hbs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-{{>menu}}
+<p>{{>menu}}</p>
 <p><h3>Your date:</h3>
 <p>{{yourYear}}-{{yourMonth}}-{{yourDate}}</p>
 <p><h3>Is your day day off?</h3>
