--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,10 @@
 <footer>
-    <p><p> Copyright eclerchik13  © 2020</p></p>
+    <div class="wrapper">
+        <div class="footer">
+    <p>© Copyright 2020 | Powered by eclerchik13</p>
+            <div class="information">
+                For feedback: <a href="https://github.com/eclerchik13">GitHub</a>
+            </div>
+        </div>
+    </div>
 </footer>
