--- a/views/dayOff.hbs
+++ b/views/dayOff.hbs
@@ -3,18 +3,35 @@
 <head>
     <title>{{title}}</title>
     <meta charset="utf-8">
+
+    <link type="text/css" href="/css/style.css" rel="stylesheet">
+
 </head>
 <body>
 {{>menu}}
 <form name="action" method="get" action="{{path}}">
-    <p><h1>Function: Definition of the Day Off</h1></p>
-    <p><h3>Enter your login:</h3></p>
-    <input type="text" name="login" placeholder="Your login">
-    <p>Input your date</p>
-    <p><input type="text" name="year_" placeholder="year">
-    <input type="text" name="month_" placeholder="month">
-    <input type="text" name="date_" placeholder="day"></p>
-    <p><input type="submit" value="Send"></p>
+    <div class="header">
+        <br><p>Function: Definition of the Day Off</p>
+    </div>
+
+    <div class="information">
+        <br>Enter your login:
+    </div>
+
+    <div class="auth">
+        <input type="text" name="login" placeholder="Your login">
+    </div>
+    <div class="information">
+        <br>Input your date:
+    </div>
+
+    <div class="url">
+        <p><input type="text" name="year_" placeholder="year">
+        <input type="text" name="month_" placeholder="month">
+        <input type="text" name="date_" placeholder="day"></p>
+    </div>
+        <br><input type="submit" class="button button1" value="Send">
+
 </form>
 {{>footer}}
 </body>
