--- a/views/dayOffResult.hbs
+++ b/views/dayOffResult.hbs
@@ -3,14 +3,27 @@
 <head>
     <title>{{title}}</title>
     <meta charset="utf-8">
+
+    <link type="text/css" href="/css/style.css" rel="stylesheet">
+
 </head>
 <body>
 <p>{{>menu}}</p>
-<p><h3>Your date:</h3>
-<p>{{yourYear}}-{{yourMonth}}-{{yourDate}}</p>
-<p><h3>Is your day day off?</h3>
-    - {{answer}}
-<p>
+    <div class="header">
+        <p><br>Your date:
+    </div>
+
+    <div class="information">
+        <p>{{yourYear}}-{{yourMonth}}-{{yourDate}}</p>
+    </div>
+
+<div class="header">
+    <p><br>Is your day day off?
+</div>
+
+<div class="information">
+        <p>{{answer}}</p>
+</div>
     {{>footer}}
 </body>
 </html>
