Added some changes

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,5 +1,10 @@
-<nav><a href="/">Главная страница</a>
-    <a href="/api/LukinaValeria/lab1/1_Input">Task 1</a>
-    <a href="/api/LukinaValeria/lab1/2_Input">Task 2</a>
-    <a href="/api/LukinaValeria/lab1/3_Input">Task 3</a>
+<nav>
+    <div class="main">
+
+           Menu:  <a href="/">Home page</a> |
+        <a href="/api/LukinaValeria/lab1/1_Input" >Task 1</a> |
+        <a href="/api/LukinaValeria/lab1/2_Input" >Task 2</a> |
+        <a href="/api/LukinaValeria/lab1/3_Input" >Task 3</a>
+
+    </div>
 </nav>
