--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,69 +1,62 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 body {
-    font-family: fantasy, sans-serif;
-    background-image: url("lowpoly.png");
-    /*background-attachment: fixed;*/
-    /*font-weight: normal; /*вместо цифры 700 можно было написать слово bold, но в нём аж на 1 символ больше :) */
+    /*font-family: fantasy, sans-serif;*/
+    font-family: 'Roboto', sans-serif;
+    background: rgb(36,36,36);
     color: white;
+    /*position: center;*/
+    /*display: block; */
     text-align:  center;
-    /*font-family: Arial;*/
+    margin-top: 10%;
+    /*top: 60%;*/
+    /**/
+}
+
+.clear {clear:both;}
+
+A {
+    color: whitesmoke; /* Цвет текста */
+    text-decoration: none;
 }
 
 nav {
-    color: black;
-    background: white;
-    height: 30px;
+    color: whitesmoke;
+    position: absolute;
+    top: 15px;
+    background: rgb(36,36,36);
+    width: 91%;
 }
 
-input[type = text] {
-    background-color: white;
-    color: white;
-    border: 2px solid grey;
-    border-radius: 4px;
-    width: 15%;
-}
-
-.main{
-    font-size: 20px;
-    text-align:  center;
-}
-
+/*
 .wrapper {
     position: relative;
     min-height: 100%;
 }
-
+*/
 .content{
     font-size: 20px;
 }
 
-
 footer {
-    color: black;
-    background: white;
+    color: whitesmoke;
+    background: rgb(36,36,36);
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 80px;
+    height: 50px;
 }
 
+/*
 .header{
-    /*text-indent:460px;*/
     font-size: 30px;
-    /*text-align:  center;
-    /*color: white;*/
 }
 
 .information{
     font-size: 20px;
-}
+}*/
+/*
 .button {
-    background-color: black;
     border-radius: 13px;
     color: white;
     padding: 15px 32px;
@@ -73,10 +66,121 @@ footer {
     font-weight: 700;
     cursor: pointer;
     position: relative;
+    background: linear-gradient(to top left, black, gray);
 }
 
 .button1:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+*/
+
+.b{
+    color:#7f8084;
+    font-size:1em;
+    cursor:pointer;
+    margin-left: 16px;
+}
+
+.c {
+    color:#7f8084;
+    border:1px solid grey;
+    padding:7px 10px;
+    border-radius:3px;
+    font-size:0.8em;
+    cursor:pointer;
+    margin-left: 16px;
+}
+
+.d{
+    color:#7f8084;
+    font-size:1em;
+    cursor:pointer;
+    margin-left: 100px;
+}
+
+.m{
+    color:#7f8084;
+    border:1px solid grey;
+    padding:7px 10px;
+    border-radius:3px;
+    font-size:1em;
+    cursor:pointer;
+    margin-left: 100px;
+}
+
+.b:hover {color:#d3d3d3}
+.c:hover {color:#d3d3d3}
+.d:hover {color:#d3d3d3}
+
+
+.littleText{
+    color:#7f8084;
+    margin:5px 40px;
+}
+
+.head {
+    /*float:left;*/
+    color:white;
+    font-size:1.3em;
+}
+
+input {
+    width:20%;
+    padding:5px;
+    height:30px;
+    border-radius:3px;
+    /*margin:5px 55px;*/
+    outline: none;
+}
+input[type="text"]:focus, input[type="password"]:focus {
+    border:1px solid grey;
+    box-shadow:none;
+}
+input[type="text"]{
+    background:transparent;
+    border:2px solid grey;
+    padding-left: 10px;
+    color:#e6b333;
+}
+input[type="password"]{
+    background:transparent;
+    border:2px solid grey;
+    padding-left:10px;
+    color:#e6b333;
+}
+input[type="submit"]{
+    background:#e6b333;
+    border:none;
+    color:white;
+    text-align:center;
+    font-size:0.9em;
+    cursor:pointer;
+}
+
+.user-input:focus .user{
+    background:white !important;
+}
+.info{
+    position: absolute;
+    top: 35%;
+    left:35%;
+}
+
+.info_1{
+    /*text-align:center;*/
+    margin-left: 50px;
+}
+.info_2{
+    margin-left: 0;
+}
+.info_3{
+    margin-left: 20px;
+}
+
+.link{
+    position: absolute;
+    top: 240px;
+    left:48%;
 }
 
 .url{
@@ -85,11 +189,8 @@ footer {
 
 .auth{
     position: relative;
-    /*left: 45%;*/
 }
 
 .error{
-    /*text-align:  center;*/
-    color: black;
-    font-size: 25px;
+    color: #A50A00;
 }
