Some changes in interface

--- a/views/camelRegisterResult.hbs
+++ b/views/camelRegisterResult.hbs
@@ -9,14 +9,14 @@
 </head>
 <body>
 {{>menu}}
-<div class="header">
+<h3 class="head">
 <p><br>Your string before camel register:
-</div>
-<br><div class="information">
-{{yourQuery}}</div>
-<div class="header">
-<br><p>Your string after camel register:</div>
-<div class="information"><br>{{answer}}</div></p>
+</h3>
+
+{{yourQuery}}
+<h3 class="head">
+    <br><p>Your string after camel register:</h3>
+{{answer}}</p>
 <p>
     {{>footer}}
 </body>
