--- a/views/dayOffResult.hbs
+++ b/views/dayOffResult.hbs
@@ -9,17 +9,17 @@
 </head>
 <body>
 <p>{{>menu}}</p>
-    <div class="header">
+    <h3 class="head">
         <p><br>Your date:
-    </div>
+    </h3>
 
     <div class="information">
         <p>{{yourYear}}-{{yourMonth}}-{{yourDate}}</p>
     </div>
 
-<div class="header">
+<h3 class="head">
     <p><br>Is your day day off?
-</div>
+</h3>
 
 <div class="information">
         <p>{{answer}}</p>
