--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,10 +1,5 @@
 <footer>
-    <div class="wrapper">
         <div class="footer">
-    <p>© Copyright 2020 | Powered by eclerchik13</p>
-            <div class="information">
-                For feedback: <a href="https://github.com/eclerchik13">GitHub</a>
-            </div>
+    © Copyright 2020 | Powered by eclerchik13 |<a href="https://github.com/eclerchik13" class="b">GitHub</a>
         </div>
-    </div>
 </footer>
