--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,10 +1,7 @@
 <nav>
     <div class="main">
 
-           Menu:  <a href="/">Home page</a> |
-        <a href="/api/LukinaValeria/lab1/1_Input" >Task 1</a> |
-        <a href="/api/LukinaValeria/lab1/2_Input" >Task 2</a> |
-        <a href="/api/LukinaValeria/lab1/3_Input" >Task 3</a>
-
+           <h3><a href="/" class="m">Home</a>
+        <a href="/signIn" class="m">Sign in</a></h3>
     </div>
 </nav>
