--- a/views/sortFunction.hbs
+++ b/views/sortFunction.hbs
@@ -11,20 +11,12 @@
         {{>menu}}
         <form name="action" method="get" action="{{path}}">
             <div class="header">
-                <br><p>Function: Sorting of string
-            </div>
+                <h3 class="head">
+                <br><p>Sorting of string
+            </h3></div>
 
-            <div class="information">
-            <br><p>Enter your login:
-            </div>
-
-            <div class="auth">
-                <input type="text" name="login" placeholder="Your login">
-            </div>
-
-            <div class="information">
                 <br><p>Input your string</p>
-            </div>
+
 
             <div class="url">
 
