--- a/views/camelRegister.hbs
+++ b/views/camelRegister.hbs
@@ -10,15 +10,12 @@
 <body>
 {{>menu}}
 <form name="action" method="get" action="{{path}}">
-    <div class="header">
-        <p><br>Function: Make Camel Register</p>
-    </div>
-    <div class="information">
-    <p><br>Input your string</p>
-    </div>
+    <h3 class="head">
+        <p><br>Make Camel Register</p>
+    </h3>
 
     <div class="url">
-    <p><input type="text" name="String" placeholder="Your string"></p>
+    <p><input type="text" name="String" placeholder="Input your string"></p>
     </div>
     <p><br><input type="submit" class="button button1" value="Send"></p>
 </form>
