--- a/views/dayOff.hbs
+++ b/views/dayOff.hbs
@@ -10,25 +10,14 @@
 <body>
 {{>menu}}
 <form name="action" method="get" action="{{path}}">
-    <div class="header">
-        <br><p>Function: Definition of the Day Off</p>
-    </div>
-
-    <div class="information">
-        <br>Enter your login:
-    </div>
-
-    <div class="auth">
-        <input type="text" name="login" placeholder="Your login">
-    </div>
-    <div class="information">
-        <br>Input your date:
-    </div>
+    <h3 class="head">
+        <br><p>Definition of the Day Off</p>
+    </h3>
 
     <div class="url">
-        <p><input type="text" name="year_" placeholder="year">
-        <input type="text" name="month_" placeholder="month">
-        <input type="text" name="date_" placeholder="day"></p>
+        <p><input type="text" name="year_" placeholder="Input your year">
+        <input type="text" name="month_" placeholder="Input your month">
+        <input type="text" name="date_" placeholder="Input your day"></p>
     </div>
         <br><input type="submit" class="button button1" value="Send">
 
