--- a/views/sortFunctionResult.hbs
+++ b/views/sortFunctionResult.hbs
@@ -9,11 +9,11 @@
 </head>
     <body>
         {{>menu}}
-        <div class="header">
-        <p><br>Your string before sorting:</div>
+        <h3 class="head">
+        <p><br>Your string before sorting:</h3>
         <div class="information">
         <br>{{yourQuery}}</div>
-        <div class="header"><p><br>Your string after sorting:</div>
+        <h3 class="head"><p><br>Your string after sorting:</h3>
         <div class="information"><br>{{answer}}</div>
         <p>
         {{>footer}}
